Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <a id="ericdurmgithubio" class="anchor" href="#ericdurmgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ERICDURM.github.io</h1>
 
 <p>庞小凡写字的地方</p>
+
+<p>It's about 【htc】【Google】【BVB09】【漫长而孤独的旅程】</p>
         </section>
 
         <aside id="sidebar">
